--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+    margin: 0;
 }
 .center {
 	max-width: 1400px;
@@ -10,14 +10,14 @@ header {
 	background-color: black;
 	display: flex;
 	justify-content: space-between;
-	box-shadow: 0 10px 0px 0 orange;
+	border-bottom: 5px solid orange;
 }
 a:hover { 
-transition: all 0.5s; 
-color: #FF9901;
+    transition: all 0.5s; 
+    color: #FF9901;
 }
 header ul {
-list-style: none;
+    list-style: none;
 	display: flex;
 	justify-content: space-around;
 }
@@ -27,11 +27,10 @@ header ul span {
 	margin-right: 15px;
 }
 header a {
-text-decoration: none;
-color: white;
+    text-decoration: none;
+    color: white;
 }
 .search {
-	width: 15%;
 	margin-right: 30px;
 }
 .searchIcon {
@@ -43,8 +42,6 @@ color: white;
 .searchIcon {
 	border-radius: 50px;
 	color: white;
-	width: 100%;
-	height: 30px;
 	margin-top: 15px;
 	background-color: rgb(49, 49, 49);
 	border: none;
@@ -53,39 +50,29 @@ color: white;
 	border-width: 5px;
 	border-color: rgb(49, 49, 49);
 }
-.searchIcon:hover {
+.searchIcon:focus {
 	background-image: none;
 }
 .mainBaner {
 	display: flex;
-	width: 100%;
 	justify-content: space-between;
-	height: 100px;
-	padding-bottom: 35px;
 }
 .mainBanerImg {
-	margin-top: 30px;
-	margin-right: 15px;
-}
-.mainBanerImg img {
-	width: 720px;
-	height: 80px;
-}
-h1 {
-	margin: 0 auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 .Xpression {
-	font-size: 25px;
-	margin-left: 20px;
+	font-size: 30px;
+	margin-left: 50px;
 	margin-top: 20px;
 }
 .Xpression p {
-	font-size:15px;
+	font-size:18px;
 	color: gray;
 }
 nav {
 	background: linear-gradient(#e3e3e3, #9f9f9f);
-	border: solid;
+	border: solid 2px;
 	border-color:#838080;
 }
 nav ul {
@@ -109,32 +96,20 @@ nav a:hover {
 	color: #dd8f00;
 }
 .hugeArticle {
-	margin-top: 30px;
+	margin-top: 20px;
 	display: flex;
 	justify-content: space-between;
-	padding-bottom: 30px;
-}
-.hugeArticleImg {
-	margin-right: 15px;
-	width: 760px;
-	height: 460px;
-}
-.hugeArticleImg img {
-	width: 760px;
-	height: 460px;
+	margin-bottom: 20px;
 }
 .hugeArticleText {
-width: 500px;
-	margin-top: 50px;
-	margin-left: 20px;
 	font-size: 24px;
-	margin-right: 10px;
+	margin-right: 20px;
 }
 .hugeArticleText a {
-		font-size: 24px;
+	font-size: 24px;
 	}
 .hugeArticleText form {
-	margin-top: 30px;
+	margin-top: 15px;
 }
 .more {
 text-decoration: none;
@@ -142,13 +117,11 @@ text-decoration: none;
 	font-size: 20px;
 }
 .threeBlocks {
-   display: flex;
+    display: flex;
 	justify-content: space-between;
-	margin-left: 5px;
-	margin-right: 5px;
 	background: #e3e3e3;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	font-size: 18px;
 }
 .innerBlockFlex {
@@ -156,64 +129,61 @@ text-decoration: none;
 	justify-content: flex-start;
 }
 .threeBlocks article {
-		margin-left: 15px;
-	margin-right: 15px;
+	margin-top: 15px;
+	margin-left: 20px;
+	margin-right: 20px;
 	}
 .innerBlockFlex h3 {
-	margin-left: 10px;
+	margin-left: 15px;
 }
 .FourArticles {
-  display:flex;
-  justify-content: space-beetween;
+    display:flex;
+    justify-content: space-beetween;
 	margin-bottom: 35px;
 }
 .icon {
-  width:42px;
-  height:42px;
-  float: left;
-	margin-right: 10px;
+    float: left;
+    margin-right: 15px;
+    border-radius: 50%;
 }
 .moreSmall {
-  text-decoration: none;
-  color: #dd8f00;
-  float: right;
-  font-size: 20px;
+    text-decoration: none;
+    color: #dd8f00;
+    float: right;
+    font-size: 20px;
 	
 }
 .smallArticle {
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 20px;
 }
 .bigArticle {
-  margin-left: 20px;
+    margin-left: 30px;
 }
 .flamingo {
-  box-shadow: 0 5px 5px 0 gray;
-  border-style: solid;
-  border-width: 3px;
-  border-color: white;
+    box-shadow: 0 5px 5px 0 gray;
+    border-style: solid;
+    border-width: 3px;
+    border-color: white;
 }
 footer {
-display: flex;
-justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 	padding-bottom: 15px;
 	color: #d6d0d0;
 	background: rgb(49, 49, 49);
 }
-footer h3 {
-	margin-right: 30px;
-}
 .fromBlog {
-	width: 350px;
 	margin-left: 20px;
+	width: 30%;
 }
 footer div a {
 	text-decoration: none;
 	color: #d6d0d0;
 }
 .newssetler {
-background: #4a4a4a;
+    background: #4a4a4a;
 	border: none;
 	border-radius: 10px;
 	color: #d6d0d0;
