--- a/CSS/mobileView.css
+++ b/CSS/mobileView.css
@@ -77,8 +77,9 @@
 		margin-left: 5%;
 	} 
 	.Qlinks {
-		margin-left: 60%;
-		margin-right: 10px;
+		text-align: center;
+		margin-left: 100px;
+		margin-right: 100px;
 	}
 	.cDetails {
 		margin-left: 5%;
